codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_review_needed_handler_narrow.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 44)"
---
                                            
  PreToolUse hooks                          
  1 hook needs review before it can run.    
                                            
  [!] Hook 1 · new · Validates shell comm…  
                                            
  Event     PreToolUse                      
  Matcher   Bash                            
  Source    User config - /tmp/hooks.json   
  Command   /tmp/pre-tool-use-check.sh      
  Timeout   30s                             
  Trust     New hook - review required      
                                            
  Press t to trust; esc to go back
